src/test/ui/borrowck/borrowck-uninit.stderr
error[E0381]: binding `x` isn't initialized
  --> $DIR/borrowck-uninit.rs:5:9
   |
LL |     let x: isize;
   |         - variable declared here
LL |     foo(x);
   |         ^ `x` used here but it isn't initialized

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
